css/style.css
body {
    position: relative; 
}
  
/*.nav1 {
    list-style-type: none;
    margin-top: 0px;
	margin-bottom: 0px;
	padding-top: 5px;
    padding-bottom: 5px;
    overflow: hidden;
    background-color: #333;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 999;
}*/
button.navbar-toggler {
	float: right;
	margin-top: 5px;
	margin-right: 8px;
}

.nav-link:hover{
	color:white!important;
}

#navbar1 {
	float: right;
}

.nav1 {
	padding: 12px 5px 2px 0;
}

.bod {
    float: left;
    height: 3em;
	/*margin-top: 15px; */
    /*margin-bottom: 3px;*/
    margin-left: 20px;
    border-color: white;
    border-width: 0px;
    border-style: solid;
    border-radius: 50%;
	box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.5);
	-webkit-transform: translateZ(0);
  }

#navbar1 ul {
  list-style-type: none;
  float: right;
  /*margin-bottom: 0px;*/
  padding: 6px 5px;
}

li {
  float: left;
}

ul li a {
    display: block;
    text-align: center;
    /*padding: 14px 16px;*/
	/*margin: -24px 0px;*/
    text-decoration: none;
}

/*ul#nav2 li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;

.nav2 {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
        flex-direction: column;
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
}}*/

.navbar-nav li a {
	display: block;
	text-align: center;
    /*padding: 14px 16px;*/
    text-decoration: none;
}

.grid-container {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: 40% 30% 30%;
  height: 50vh;
  width: 90vw;
  max-height: 100%;
  max-width: 100%;
}

.grid-item {
  /*background-color: rgba(255, 255, 255, 0.8);*/
  /*border: 1px solid rgba(0, 0, 0, 0.8);  */
  position: absolute;
  font-size: 30px;
  align-self: center;
  justify-self: center;
  max-height: 100%;
  max-width: 100%;
}

.grid-item img{
  max-height: 100%;
  max-width: 100%;
}

/* Change the link color to #111 (black) on hover */
.mobile li a:active {
    background-color: rgba(255,255,255,0.3);
	border-radius: 10%;
    color: white;
}

.desktop li a:hover {
	background-color: rgba(255,255,255,0.3);
	border-radius: 10%;
    color: white;
}

footer ul {
	list-style-type: none;
	float: right;
	max-height: 30px;
}

footer ul li a {
	padding: 10px 15px 10px 15px;
}

footer ul li a:hover {
	background-color: rgba(0,0,0,1);
	color: white;
}

section {
  padding: 150px 0;
  height: 100vh;
  max-height: 100%;
  width: 100vw;
  max-width: 100%;
}

.navbar-toggler:focus,
.navbar-toggler:active {
   outline: 0;
}
.navbar-toggler {
   padding-top: 8px;
}

.navbar-toggler span {
   display: block;
   background-color: #FFF;
   height: 3px;
   width: 25px;
   margin-top: 4px;
   margin-bottom: 4px;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
   position: relative;
   left: 0;
   opacity: 0.8;
}

.navbar-toggler span:nth-child(1),
.navbar-toggler span:nth-child(3) {
   -webkit-transition: transform .35s ease-in-out;
   -moz-transition: transform .35s ease-in-out;
   -o-transition: transform .35s ease-in-out;
   transition: transform .35s ease-in-out;
}

.navbar-toggler:not(.collapsed) span:nth-child(1) {
    /*position: absolute;
    left: 12px;
    top: 10px;*/
	top: 7px;
    -webkit-transform: rotate(135deg);
    -moz-transform: rotate(135deg);
    -o-transform: rotate(135deg);
    transform: rotate(135deg);
    opacity: 0.8;
}

.navbar-toggler:not(.collapsed) span:nth-child(2) {
    height: 12px;
    visibility: hidden;
    background-color: transparent;
}

.navbar-toggler:not(.collapsed) span:nth-child(3) {
    /*position: absolute;
    left: 12px;
    top: 10px;*/
	top: -16px;
    -webkit-transform: rotate(-135deg);
    -moz-transform: rotate(-135deg);
    -o-transform: rotate(-135deg);
    transform: rotate(-135deg);
    opacity: 0.8;
	margin-bottom: -4px;
}

/*section:nth-child(even) .diamond {
  height: 150px;
  width: 150px;
  background-color: #7FDBFF;
  transform: rotate(45deg);
} */

/*section:nth-child(odd) {background-color: #19beff;}*/
section:nth-child(odd) {
  background-color: #19beff;
  background-position: center bottom -1px;/*bottom -1px*/
  background-image: url(../img/copper-overlay.svg);
  background-repeat: no-repeat;
  background-size: 101vw;/*101vw*/
}

section:nth-child(even) {
  background-color: #FEC340;
  background-attachment: fixed;
  background-position: center bottom;
  background-image: url(../img/giraffe.svg);
  background-repeat: no-repeat;
  background-size: 100vw;
}

section:nth-child(odd) .diamond {
  height: 150px;
  width: 150px;
  background-attachment: fixed;
  background-color: #7FDBFF;
  transform: rotate(45deg);
} 

section:nth-child(even) .diamond {
  margin: -50px 0;
  position: relative;
  left: 50%;
  top: 300px;
  height: 150px;
  width: 150px;
  background-color: #FEC340;
  transform: rotate(45deg);
} 

h2 {
  font-family: 'Jura', sans-serif;
  font-weight: bold;
}
p {
  font-family: 'Jura', sans-serif;
}
.caption {
  position: relative;
  overflow: hidden;
}

.caption__media {
  max-width: 100%;
  height: auto;
}

.caption__overlay {
  overflow: auto;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 10px;
  color: white;
  transform: translateY(100%);
  transition: transform .35s ease-out;
}

.caption:hover .caption__overlay {
  transform: translateY(0);
}

.caption__overlay__title {
  margin: 0;
  padding: 0 0 12px;
  transform: translateY(calc(-100% - 10px)); /* +10px overlay padding */
  transition: transform .35s ease-out;
}

.caption:hover .caption__overlay__title {
  transform: translateY(0);
}

.caption::before {
  content: ' ';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: transparent;
  transition: background .35s ease-out;
}

.caption:hover::before {
  background: rgba(0, 0, 0, .5);
}

.caption__overlay__content {
  font-size: 18px;
}

iframe {
    border: none;
}

#video-view{	
    width: auto;
    height: auto;
    /*background-color: #FF69B4;*/
    overflow:auto;
	/*background-color = #FF69B4!important; 
	padding-left: 20vw;
	padding-top: 55px;
	margin-bottom: 60px;*/
	display:none;
	position: relative;
	/*bottom: 0;*/
}

#video-view h2{
	margin: auto;
	text-align: center;
}
#video-view iframe{
	margin: auto;
	max-height: 100%;
	display: block;
	/*position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;*/
}

.class-video{
	position: relative;
    /*padding-bottom: 56.25%;
    padding-top: 35px;
    height: 0;
    overflow: hidden;*/
}
/*footer {
	background-color: #19beff;
}*/

